--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-    "python.pythonPath": "C:/Users/User/Anaconda3/python.exe"
+    "python.pythonPath": "C:\\Users\\User\\Anaconda3\\python.exe",
+    "terminal.integrated.fontSize": 15,
+    "terminal.integrated.shellArgs.windows": [
+        "/K",
+        "C:\\Users\\User\\Anaconda3\\Scripts\\activate.bat C:\\Users\\User\\Anaconda3"
+    ],
+    "terminal.integrated.shell.windows": "C:\\Windows\\System32\\cmd.exe"
 }
