--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,7 +3,7 @@
     // for the documentation about the tasks.json format
     "version": "2.0.0",
     "command": "python",
-    "isShellCommand": true,
+    "shell": true,
     "args": ["${file}"],
-    "showOutput": "always"
+    "presentation" : { "reveal": "always" }
 }
