--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,20 @@
 {
     "python.pythonPath": "C:\\Users\\User\\Anaconda3\\python.exe",
-    "terminal.integrated.fontSize": 15,
     "terminal.integrated.shellArgs.windows": [
         "/K",
         "C:\\Users\\User\\Anaconda3\\Scripts\\activate.bat C:\\Users\\User\\Anaconda3"
     ],
-    "terminal.integrated.shell.windows": "C:\\Windows\\System32\\cmd.exe"
+    "terminal.integrated.shell.windows": "C:\\Windows\\System32\\cmd.exe",
+    
+    "terminal.integrated.fontSize": 16,
+    "shellLauncher.shells.windows": [
+        {
+            "shell": "C:\\WINDOWS\\system32\\cmd.exe",
+            "label": "cmd"
+        },
+        {
+            "shell": "C:\\Windows\\System32\\WindowsPowerShell\\v1.0\\powershell.exe",
+            "label": "PowerShell"
+        }
+    ]
 }
