--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,7 @@
 {
     "python.pythonPath": "C:\\Users\\User\\Anaconda3\\python.exe",
-    "terminal.integrated.shellArgs.windows": [
-        "/K",
-        "C:\\Users\\User\\Anaconda3\\Scripts\\activate.bat C:\\Users\\User\\Anaconda3"
-    ],
-    "terminal.integrated.shell.windows": "C:\\Windows\\System32\\cmd.exe",
+    
+    "terminal.integrated.shell.windows": "C:\\Windows\\System32\\WindowsPowerShell\\v1.0\\powershell.exe",
     
     "terminal.integrated.fontSize": 16,
     "shellLauncher.shells.windows": [
@@ -15,6 +12,6 @@
         {
             "shell": "C:\\Windows\\System32\\WindowsPowerShell\\v1.0\\powershell.exe",
             "label": "PowerShell"
-        }
+        },
     ],
 }
